--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,65 +1,144 @@
-body{
-    font-family : 'Courgette', cursive;
-    background-color: blueviolet;
-    
+body {
+    background: blueviolet;
+    color:black;
+    font-family: Lato, sans-serif;
+  }
+.heading:hover {
+  
+  text-shadow: 2px 1px lime;
 }
-
-.container{
-    height :330px;
-    width : 1000px;
-    position : absolute;
-    top :50%;
-    bottom : 50%;
-    transform : translateX(40%) translateY(-50%);
-    background-color: lavender;
-    padding:20px;
-    border: 1px solid lavenderblush;
-    box-shadow:  0 0 8px 3px #fff;
-    align-content: center;
-
+.heading
+{
+  overflow: hidden;
+  border: 1px solid #ccc;
+  color: white;
+  background:
+linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+background-color: #131313;
+background-size: 20px 20px;
 }
-
-.title{
-    padding-top:20px;
-    text-align: center;
-    font-size: 36px;
+  h1{
+    font-size: 56px;
+    text-align : center;   
+    margin-top : 65px;
+}
+  .container {
+    display: block;
+    width: 400px;
+    margin: 80px auto 0;
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+  li * {
+    float: left;
+  }
+  li, h3 {
+    clear:both;
+    list-style:none;
+  }
+  input, button {
+    outline: none;
+  }
+  button {
+    background: none;
+    border: 0px;
+    color:black;
+    font-size: 15px;
+    width: 60px;
+    margin: 10px 0 0;
+    font-family: Lato, sans-serif;
+    cursor: pointer;
+  }
+  button:hover {
+    color: black;
+  }
+  /* Heading */
+  h3,
+  label[for='new-task'] {
+    color:black;
+    font-weight: 700;
+    font-size: 15px;
+    border-bottom: 2px solid black;
+    padding: 30px 0 10px;
+    margin: 0;
     text-transform: uppercase;
+  }
+  input[type="text"] {
+    margin: 0;
+    font-size: 18px;
+    line-height: 18px;
+    height: 18px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    background: #fff;
+    border-radius: 6px;
+    font-family: Lato, sans-serif;
     color:black;
-
-}
-
-.question{
-    padding : 32px;
-    text-align : left;
-    font-size: 25px;
+  }
+  input[type="text"]:focus {
     color:black;
-}
-
-.option{
-   font-size: 22px;
-   color: black;
-   padding-left: 35px;
-}
-
-.next-btn{
-     
-    border : none;
-    outline:none;
-    width:100px;
-    height : 35px;
-    border-radius : 20px;
-    cursor : pointer;
-    float : right;
-    margin : 60px;
-}
-.next-btn:hover{
-    color: white;
-    background:blueviolet;
-}
-
-.result{
-    height: 100px;
-    text-align: center;
-    font-size: 75px;
-    
+  }
+  
+  /* New Task */
+  label[for='new-task'] {
+    display: block;
+    margin: 0 0 20px;
+  }
+  input#new-task {
+    float: left;
+    width: 318px;
+  }
+  p > button:hover {
+    color: #0FC57C;
+  }
+  
+  /* Task list */
+  li {
+    overflow: hidden;
+    padding: 20px 0;
+    border-bottom: 1px solid #eee;
+  }
+  li > input[type="checkbox"] {
+    margin: 0 10px;
+    position: relative;
+    top: 15px;
+  }
+  li > label {
+    font-size: 18px;
+    line-height: 40px;
+    width: 237px;
+    padding: 0 0 0 11px;
+  }
+  li >  input[type="text"] {
+    width: 226px;
+  }
+  li > .delete:hover {
+    color: #CF2323;
+  }
+  
+  /* Completed */
+  #completed-tasks label {
+    text-decoration: line-through;
+    color:black;
+  }
+  
+  /* Edit Task */
+  ul li input[type=text] {
+    display:none;
+  }
+  
+  ul li.editMode input[type=text] {
+    display:block;
+  }
+  
+  ul li.editMode label {
+    display:none;
+  }
 }
